projects/compiler/test/typechecker/traits/error_nonpub_func.abra
trait Foo {
  func foo(self): Int
  pub func fooPub(self): Int
  func fooStatic(): Int
  pub func fooStaticPub(): Int
}

// var f: Foo
